<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LoopMe SDK Sample</string>
    <string name="interstitial">Interstitial</string>
    <string name="banner">Banner</string>
    <string name="load_interstitial">Load Interstitial</string>
    <string name="load_custom_interstitial">Load Custom Interstitial</string>
    <string name="load_custom">Load Custom</string>
    <string name="show_interstitial">Show Interstitial</string>
    <string name="default_interstitial_app_key">aefab282dd</string>
    <string name="default_mpu_app_key">f5826542ae</string>
    <string name="default_longitudinal_app_key">3ae8c26803</string>
    <string name="load_mpu">load MPU (300x250)</string>
    <string name="load_longitudinal">load (320x50)</string>
    <string name="destroy_ad">destroy ad</string>
    <string name="height_label">H:</string>
    <string name="width_label">W:</string>

    <string-array name="interstiatial_app_keys">
        <item>aefab282dd</item>
        <item>dafa602ab1</item>
    </string-array>
</resources>
